// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DreamState: golden-emotion-snapshot should create and validate French locale emotional snapshot: french-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "fr-FR",
  "metadata": {},
  "payload": "Votre stratégie a été créée avec succès.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "professional",
  "traceId": "test-trace-001",
  "trustScore": 0.95,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate French locale emotional snapshot: french-emotional-render 1`] = `
{
  "cta": "Procéder",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"fr-FR"}",
  "helperText": "[fr-FR] Here's what we've prepared based on industry standards.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="fr-FR">
        <div class="response-panel">
          <div class="content">Votre stratégie a été créée avec succès.</div>
          <div class="helper-text">[fr-FR] Here's what we've prepared based on industry standards.</div>
        </div>
        <button class="cta-button">Procéder</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate baseline emotional UX snapshot: baseline-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "en-US",
  "metadata": {},
  "payload": "Your strategy has been created successfully.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "professional",
  "traceId": "test-trace-001",
  "trustScore": 0.95,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate baseline emotional UX snapshot: baseline-emotional-render 1`] = `
{
  "cta": "Proceed",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "Here's what we've prepared based on industry standards.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Your strategy has been created successfully.</div>
          <div class="helper-text">Here's what we've prepared based on industry standards.</div>
        </div>
        <button class="cta-button">Proceed</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate gratitude tone snapshot: grateful-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "en-US",
  "metadata": {},
  "payload": "Thank you for your valuable feedback. We appreciate your insights.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "grateful",
  "traceId": "test-trace-001",
  "trustScore": 0.95,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate gratitude tone snapshot: grateful-emotional-render 1`] = `
{
  "cta": "Continue",
  "emotionalSnapshot": "{"tone":"grateful","trustScore":0.95,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "Thank you for your input. We value your collaboration.",
  "messageStyle": "appreciative",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container appreciative" data-trust="enhanced" data-tone="grateful" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Thank you for your valuable feedback. We appreciate your insights.</div>
          <div class="helper-text">Thank you for your input. We value your collaboration.</div>
        </div>
        <button class="cta-button">Continue</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate high trust volatility snapshot: severe-volatile-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "en-US",
  "metadata": {},
  "payload": "System performance is severely degraded.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "concerned",
  "traceId": "test-trace-001",
  "trustScore": 0.49,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate high trust volatility snapshot: severe-volatile-emotional-render 1`] = `
{
  "cta": "Try Again",
  "emotionalSnapshot": "{"tone":"fallback","originalTone":"concerned","trustScore":0.5,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","fallbackTriggered":true,"fallbackReason":"API hiccup","locale":"en-US"}",
  "helperText": "A quick glitch — we're smoothing it out now.",
  "messageStyle": "fallback",
  "traceId": "test-trace-001",
  "trustIndicator": "recovering",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="fallback-container" data-reason="API hiccup" data-locale="en-US">
        <div class="fallback-message">A quick glitch — we're smoothing it out now.</div>
        <button class="fallback-cta">Try Again</button>
      </div>
    ",
    "messageFormat": "fallback",
    "showHelper": true,
  },
  "usedFallback": true,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate high trust volatility snapshot: volatile-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "en-US",
  "metadata": {},
  "payload": "System performance is currently unstable.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "concerned",
  "traceId": "test-trace-001",
  "trustScore": 0.51,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate high trust volatility snapshot: volatile-emotional-render 1`] = `
{
  "cta": "Proceed With Caution",
  "emotionalSnapshot": "{"tone":"concerned","trustScore":0.51,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "Let's take a moment to consider the best approach.",
  "messageStyle": "cautious",
  "traceId": "test-trace-001",
  "trustIndicator": "compromised",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container cautious" data-trust="compromised" data-tone="concerned" data-locale="en-US">
        <div class="response-panel">
          <div class="content">System performance is currently unstable.</div>
          <div class="helper-text">Let's take a moment to consider the best approach.</div>
        </div>
        <button class="cta-button">Proceed With Caution</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate sarcastic tone snapshot: sarcastic-emotional-payload 1`] = `
{
  "emotionIntentHash": "test-hash-001",
  "locale": "en-US",
  "metadata": {},
  "payload": "Oh sure, because that always works so well.",
  "sessionId": "test-session-001",
  "timestamp": "2025-05-23T00:00:00.000Z",
  "tone": "sarcastic",
  "traceId": "test-trace-001",
  "trustScore": 0.6,
}
`;

exports[`DreamState: golden-emotion-snapshot should create and validate sarcastic tone snapshot: sarcastic-emotional-render 1`] = `
{
  "cta": "Try Again",
  "emotionalSnapshot": "{"tone":"fallback","originalTone":"sarcastic","trustScore":0.6,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","fallbackTriggered":true,"fallbackReason":"overwhelm detection","locale":"en-US"}",
  "helperText": "Take a breath — we'll walk this path together.",
  "messageStyle": "fallback",
  "traceId": "test-trace-001",
  "trustIndicator": "recovering",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="fallback-container" data-reason="overwhelm detection" data-locale="en-US">
        <div class="fallback-message">Take a breath — we'll walk this path together.</div>
        <button class="fallback-cta">Try Again</button>
      </div>
    ",
    "messageFormat": "fallback",
    "showHelper": true,
  },
  "usedFallback": true,
}
`;

exports[`DreamState: golden-emotion-snapshot should detect changes in emotional rendering: initial-mutable-render 1`] = `
{
  "cta": "Proceed",
  "emotionalSnapshot": "{"tone":"professional","trustScore":0.95,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "Here's what we've prepared based on industry standards.",
  "messageStyle": "professional",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container professional" data-trust="enhanced" data-tone="professional" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Your account has been updated successfully.</div>
          <div class="helper-text">Here's what we've prepared based on industry standards.</div>
        </div>
        <button class="cta-button">Proceed</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;

exports[`DreamState: golden-emotion-snapshot should detect changes in emotional rendering: modified-mutable-render 1`] = `
{
  "cta": "Let's Make it Happen!",
  "emotionalSnapshot": "{"tone":"enthusiastic","trustScore":0.95,"emotionIntentHash":"test-hash-001","timestamp":"2025-05-23T00:00:00.000Z","locale":"en-US"}",
  "helperText": "We're excited to bring your vision to life!",
  "messageStyle": "vibrant",
  "traceId": "test-trace-001",
  "trustIndicator": "enhanced",
  "uiComponents": {
    "enableCTA": true,
    "htmlOutput": "
      <div class="emotional-container vibrant" data-trust="enhanced" data-tone="enthusiastic" data-locale="en-US">
        <div class="response-panel">
          <div class="content">Your account has been updated successfully.</div>
          <div class="helper-text">We're excited to bring your vision to life!</div>
        </div>
        <button class="cta-button">Let's Make it Happen!</button>
      </div>
    ",
    "messageFormat": "standard",
    "showHelper": true,
  },
  "usedFallback": false,
}
`;
